# hud-manager-overlay

./: CLAUDE-SETUP.md  LICENSE  README.md  package.json  setup.sh
.github/workflows/: release.yml
src/: index.html  overlay.css  overlay.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
