[package]
name = "hud-manager-overlay"
version = "1.0.0"
description = "H.U.D Manager desktop overlay for Star Citizen"
authors = ["lerong33-byte"]
edition = "2021"

[lib]
name = "hud_manager_overlay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "hud-manager-overlay"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
